rssToChatter/src/objects/RSS_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should this feed be active?</description>
        <inlineHelpText>Should this feed be active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <description>What chatter group to post to</description>
        <externalId>true</externalId>
        <inlineHelpText>What chatter group to post to</inlineHelpText>
        <label>Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Result__c</fullName>
        <description>Any errors or logging from the last run of this RSS feed.</description>
        <inlineHelpText>Any errors or logging from the last run of this RSS feed.</inlineHelpText>
        <label>Last Run Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>When was this RSS Feed last updated?</description>
        <inlineHelpText>When was this RSS Feed last updated?</inlineHelpText>
        <label>Last Run</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSS_Feed_URL__c</fullName>
        <description>Where is the RSS feed located?</description>
        <inlineHelpText>Where is the RSS feed located?</inlineHelpText>
        <label>RSS Feed URL</label>
        <type>Url</type>
    </fields>
    <label>RSS Feed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSS-{00000}</displayFormat>
        <label>RSS Feed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSS Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>